--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">SplashGallery</string>
+    <string name="request_permisson_text">You need to provide saving permission!</string>
+    <string name="image_saved_msg">IMAGE SAVED</string>
+    <string name="error_image_save">ERROR IMAGE SAVING</string>
+    <string name="error_image_load">ERROR IMAGE LOADING</string>
+    <string name="share_message">Look at this cool Image!</string>
+    <string name="share_action_title">Share</string>
+    <string name="save_action_title">Save</string>
+    <string name="home_action_title">Home</string>
+    <string name="search_action_title">Search</string>
+    <string name="about_action_title">About</string>
 </resources>
