--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">SplashGallery</string>
-    <string name="request_permisson_text">You need to provide saving permission!</string>
+    <string name="app_name">Splash Gallery</string>
+    <string name="request_permission_text">You need to provide saving permission!</string>
     <string name="image_saved_msg">IMAGE SAVED</string>
     <string name="error_image_save">ERROR IMAGE SAVING</string>
     <string name="error_image_load">ERROR IMAGE LOADING</string>
@@ -10,4 +10,6 @@
     <string name="home_action_title">Home</string>
     <string name="search_action_title">Search</string>
     <string name="about_action_title">About</string>
+    <string name="logo_description">Logo</string>
+    <string name="no_results">NO RESULTS</string>
 </resources>
