--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,9 @@
     <string name="save_action_title">Save</string>
     <string name="home_action_title">Home</string>
     <string name="search_action_title">Search</string>
-    <string name="about_action_title">About</string>
+    <string name="about_title">About</string>
     <string name="logo_description">Logo</string>
     <string name="no_results">NO RESULTS</string>
+    <string name="connect_with_us_title">Connect with us</string>
+    <string name="about_description">Search Over 300,000 free photos brought to you by the world’s most generous community of photographers from Unsplash.com. With a huge library of photos and thousands more being added each day, chances are you\'ll find a photo for you.</string>
 </resources>
