--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Splash Gallery</string>
-    <string name="request_permission_text">You need to provide saving permission!</string>
+    <string name="request_permission_text">Provide saving permission!</string>
     <string name="image_saved_msg">IMAGE SAVED</string>
     <string name="error_image_save">ERROR IMAGE SAVING</string>
     <string name="error_image_load">ERROR IMAGE LOADING</string>
