--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -9,6 +9,7 @@
     <string name="home_action_title">Домой</string>
     <string name="search_action_title">Поиск</string>
     <string name="about_title">О приложении</string>
+    <string name="logo_description">Логотип</string>
     <string name="no_results">НЕТ РЕЗУЛЬТАТА</string>
     <string name="about_description">Поиск Более 300 000 бесплатных фотографий, представленных вам самым щедрым сообществом фотографов из Unsplash.com. С огромной библиотекой фотографий и тысячами других добавляемых каждый день, скорее всего, вы найдете для себя фото.</string>
     <string name="connect_with_us_title">Связаться с нами</string>
