--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Splash Gallery</string>
+    <string translatable="false" name="app_name">Splash Gallery</string>
     <string name="request_permission_text">Provide saving permission!</string>
     <string name="image_saved_msg">IMAGE SAVED</string>
     <string name="error_image_save">ERROR IMAGE SAVING</string>
@@ -10,7 +10,7 @@
     <string name="home_action_title">Home</string>
     <string name="search_action_title">Search</string>
     <string name="about_title">About</string>
-    <string name="logo_description">Logo</string>
+    <string translatable="false" name="logo_description">Logo</string>
     <string name="no_results">NO RESULTS</string>
     <string name="connect_with_us_title">Connect with us</string>
     <string name="about_description">Search Over 300,000 free photos brought to you by the world’s most generous community of photographers from Unsplash.com. With a huge library of photos and thousands more being added each day, chances are you\'ll find a photo for you.</string>
