--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -12,4 +12,5 @@
     <string name="no_results">НЕТ РЕЗУЛЬТАТА</string>
     <string name="about_description">Поиск Более 300 000 бесплатных фотографий, представленных вам самым щедрым сообществом фотографов из Unsplash.com. С огромной библиотекой фотографий и тысячами других добавляемых каждый день, скорее всего, вы найдете для себя фото.</string>
     <string name="connect_with_us_title">Связаться с нами</string>
+    <string name="set_as_wallpaper">Установить обои</string>
 </resources>
